cu/cu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cu-clusterip
  namespace: cu
spec:
  type: ClusterIP
  selector:
    app: cu-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
