cu/cu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cu-ingress
  namespace: cu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cu.noname2048.com
      secretName: cu-tls
  rules:
    - host: cu.noname2048.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: cu-clusterip
                port:
                  number: 80
